// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBoxSnapshot should render search input 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
>
  <TextInput
    onChangeText={[Function]}
  />
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fd6542",
        }
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`SearchBoxSnapshot should render search input with placeholder 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    placeholder="placeholder"
  />
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fd6542",
        }
      }
    >
      label
    </Text>
  </View>
</View>
`;
